# co9sv-cogserver

./: CLAUDE.md  CMakeLists.txt
cmake/: FindTorch.cmake
opencog/cogserver/: CMakeLists.txt
opencog/cogserver/aten/: ATenSCM.cc  ATenSpace.cc  ATenSpace.h  CMakeLists.txt  McpPlugATen.cc  McpPlugATen.h  McpPlugTensorLogic.cc  McpPlugTensorLogic.h  README.md  TensorLogic.cc  TensorLogic.h  TensorValue.cc  TensorValue.h  aten.scm
